# su2

./: .clang-format  .gitignore  BiCGStab.hpp  CG.hpp  CG_solver.hpp  CMakeLists.txt  Makefile  README.md  accum_type.hh  adjointfield.hh  base_program.hpp  cg.hpp  compute_hamiltonian.cc  compute_hamiltonian.hh  detDDdag_monomial.hh  detDdagD_monomial.hh  detQpQm_monomial.hh  energy_density.cc  energy_density.hh  exp_gauge.cc  exp_gauge.hh  exp_su2.cc  exp_su3.cc  expsu2.cc  expsu2.hh  gauge_energy.cc  gauge_energy.hh  gaugeconfig.cc  gaugeconfig.hh  gaugemonomial.hh  gaugemonomial_rotating.hh  genz.cc  genzsu2.cc  genzsu2.hh  get_staples.cc  get_staples.hh  gradient_flow.cc  gradient_flow.hh  hamiltonian_field.hh  heatbath_overrelaxation.hpp  (+79 more)
CG_examples/: CG.cpp  LA.hpp  Makefile  README.md
build_old/debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build_old/release/: CMakeCache.txt  Makefile  cmake_install.cmake  hmc-u1.input  hmc_flat.input  hmc_rot.input  rotating-metropolis-u1  scaling  su2-hmc  su2-kramers  su2-measure  su2-metropolis  test-groups  try  u1-hmc  u1-measure  u1-metropolis
build_old/release/confs/: C_pion.000030  nconf_counter.txt  output.hmc.data  u1_conf.16.16.1.16.Omega_0.03.b1.000000.10  u1_conf.2.2.2.2.Omega_0.b1.900000.10  u1_conf.2.2.2.2.Omega_0.b1.900000.100  u1_conf.2.2.2.2.Omega_0.b1.900000.110  u1_conf.2.2.2.2.Omega_0.b1.900000.120  u1_conf.2.2.2.2.Omega_0.b1.900000.130  u1_conf.2.2.2.2.Omega_0.b1.900000.140  u1_conf.2.2.2.2.Omega_0.b1.900000.150  u1_conf.2.2.2.2.Omega_0.b1.900000.160  u1_conf.2.2.2.2.Omega_0.b1.900000.170  u1_conf.2.2.2.2.Omega_0.b1.900000.180  u1_conf.2.2.2.2.Omega_0.b1.900000.190  u1_conf.2.2.2.2.Omega_0.b1.900000.20  u1_conf.2.2.2.2.Omega_0.b1.900000.200  u1_conf.2.2.2.2.Omega_0.b1.900000.210  u1_conf.2.2.2.2.Omega_0.b1.900000.220  u1_conf.2.2.2.2.Omega_0.b1.900000.230  u1_conf.2.2.2.2.Omega_0.b1.900000.240  u1_conf.2.2.2.2.Omega_0.b1.900000.250  u1_conf.2.2.2.2.Omega_0.b1.900000.260  u1_conf.2.2.2.2.Omega_0.b1.900000.270  u1_conf.2.2.2.2.Omega_0.b1.900000.280  u1_conf.2.2.2.2.Omega_0.b1.900000.290  u1_conf.2.2.2.2.Omega_0.b1.900000.30  u1_conf.2.2.2.2.Omega_0.b1.900000.300  u1_conf.2.2.2.2.Omega_0.b1.900000.310  u1_conf.2.2.2.2.Omega_0.b1.900000.320  u1_conf.2.2.2.2.Omega_0.b1.900000.330  u1_conf.2.2.2.2.Omega_0.b1.900000.340  u1_conf.2.2.2.2.Omega_0.b1.900000.350  u1_conf.2.2.2.2.Omega_0.b1.900000.360  u1_conf.2.2.2.2.Omega_0.b1.900000.370  u1_conf.2.2.2.2.Omega_0.b1.900000.380  u1_conf.2.2.2.2.Omega_0.b1.900000.390  u1_conf.2.2.2.2.Omega_0.b1.900000.40  u1_conf.2.2.2.2.Omega_0.b1.900000.400  u1_conf.2.2.2.2.Omega_0.b1.900000.410  (+284 more)
cg_example/: LA.hpp  Makefile  README.md  cg.cpp
doc/: Makefile  README.md  _quarto.yml  algorithms.qmd  analysis.qmd  development.qmd  doc.Rmd  howto.Rmd  howto.qmd  index.qmd  install.qmd  main.Rmd  main.input  ref.txt  staggered_fermions.Rmd  theor_background.qmd
doc/developers/: README.md
doc/su2_partitioning/: reference-values.txt
doc/users/: README.md  main-su2.input  main-u1.input  main.input  u1.Rmd
docu/: bibliography.bib  charge-notes.xoj  doc.Rmd  su2strong.R  u1strong.R
docu/developers/: add_input_file_par.md  sweep.md
docu/fermions/: Makefile  main.dvi  main.tex  main_old.tex
docu/installation_scripts/: clean.sh  do_cmake.sh  do_cmake.sh.example  do_make.sh  do_make.sh.example
docu/users/: Makefile  README.md  biblio.bib  hmc-u1.input  hmc-u1.input.example  input_file.Rmd  main-u1.input  measure-u1.input  measure-u1.input.example  metropolis-u1.input  metropolis-u1.input.example  staggered_fermions.Rmd
docu/users/fermions/: README.md
fermions/: README.md  cg.hpp  memory.hpp  staggered.hpp
hadron/: README.md  average_polyakov_loop.py  effective_curves.py  fit_xiexiyey.R  fit_xiexiyey.py  fit_xiyey.R  format-glueball.py  gflowanisotropy.R  glueball.py  gradient_flow.py  interpolate.R  matching_LH.py  plaquette.py  polypot.py  r0.py  retrace.py  retrace_with_different_masses.py  test-fit_xiexiyey.R  test-fit_xiexiyey.py  uwerr.py
include/: BiCGStab.hpp  CG.hpp  CG_solver.hpp  accum_type.hh  adjoint_su2.hh  adjoint_su3.hh  adjoint_u1.hh  adjointfield.hh  dagger.hh  detDDdag_monomial.hh  errors.hpp  exp_gauge.hh  flat-energy_density.hh  flat-gauge_energy.hpp  flat-gaugemonomial.hh  flat-gradient_flow.hh  flat-sweep.hh  gauge_energy.hh  gauge_energy.hpp  gaugeconfig.hh  gaugemonomial.hh  geometry.hh  get_staples.hh  glueballs.hpp  gradient_flow.hh  hamiltonian_field.hh  heatbath.hh  integrator.hh  io.hh  kramers_md_update.hh  links.hpp  loops.hpp  lyapunov.hh  md_params.hh  md_update.hh  metric.hpp  monomial.hh  obc.hh  obc_gaugemonomial.hh  obc_weights.hh  (+28 more)
partitioning_scripts/: calculate_tables.py
scripts/: README.md  analysis.py  effective_curves.py  gevp.py  matching_LH.py  r0.py  sampling.py  uwerr.py
test/: BiCGStab.cpp  CG.cpp  CMakeLists.txt  Makefile  README.md  cg_invert.hpp  config.yaml  dirac.cpp  h5-dump.cpp  h5-gen.cpp  h5.cpp  init_test.sh  links.cpp  smearing.cpp  yaml.cpp
yaml-cpp_examples/: CMakeLists.txt  Makefile  README.md  hmc-u1.input.example  main.cpp  measure-u1.input.example  metropolis-u1.input.example
